tests/NormalTests/paczka2/big_fuzzy/96075517.err
Error in line 2: SSPF2 A346 82,6
Error in line 1: vGg6m8tc S26 96,4
Error in line 4: vGg6m8tc A299 27,0
Error in line 32: qRccojWZ S26 2,3
Error in line 24: rIIiVEj1 A346 65,4
Error in line 47: rIIiVEj1 S26 36,1
Error in line 54: S862 S862 -1,1
Error in line 51: S862 S862 18,3
Error in line 56: vGg6m8tc S26 85,4
Error in line 85: IOW3Sj S26 11,8
Error in line 105: qRccojWZ S+6 6+,0
Error in line 94: fr7C S26 45,7
Error in line 110: IOW3Sj S862 51,23
Error in line 98: qRccojWZ A346 3,0
Error in line 113: vGg6m8tc A299 91,5
Error in line 120: qRccojWZ S26 30,4
Error in line 123: SSPF2 S862 76,2
Error in line 122: IOW3Sj S862 79,5
Error in line 133: IOW3Sj A346 24,0
Error in line 136: vGg6m8tc A346 771,0
Error in line 141: SSPF2 A346 71,6
Error in line 142: vGg6m8tc S862 37,5
Error in line 147: fr7C A299 14,1
Error in line 154: S862 A346 42,2
Error in line 162: qRccojWZ A346 126,8
Error in line 151: SSPF2 A299 12,9
Error in line 169: qRccojWZ A346 68,4
Error in line 157: S862 A299 31,4
Error in line 172: IOW3Sj A346 162,3
Error in line 174: qRccojWZ A299 725,1
Error in line 187: qRccojWZ A299 76,8
Error in line 179: fr7C S26 27,9
Error in line 196: rIIiVEj1 A346 45,5
Error in line 204: S862 S862 20,3
Error in line 202: SSPF2 S26 74,8
Error in line 207: S862 S26 33,2
Error in line 212: fr7C S862 46,6
Error in line 208: SSPF2 A299 85,3
Error in line 223: qRccojWZ S26 -3,0
Error in line 222: qRccojWZ S26 99,0
Error in line 225: SSPF2 S862 14,4
Error in line 239: qRccojWZ A299 65,8
Error in line 247: rIIiVEj1 S26 -5,2
Error in line 242: vGg6m8tc A346 45,6
